--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -172,6 +172,8 @@ section {
             textarea {
                 width: 100%;
                 height: 16px;
+                min-height: 16px;
+                max-height: 200px;
                 word-break: break-word;
                 resize: vertical;
                 @include input;
